--- a/docs/docs/integrations/chat/yi.ipynb
+++ b/docs/docs/integrations/chat/yi.ipynb
@@ -96,10 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "\n",
-    "sys.path.append(\"./../../../../libs/community/langchain_community\")\n",
-    "from chat_models.yi import ChatYi\n",
+    "from langchain_community.chat_models.yi import ChatYi\n",
     "\n",
     "llm = ChatYi(\n",
     "    model=\"yi-large\",\n",
