--- a/docs/docs/how_to/agent_toolkits.ipynb
+++ b/docs/docs/how_to/agent_toolkits.ipynb
@@ -232,9 +232,7 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "789d9e0e-1596-464b-b80c-a9dc6d46bd87",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -245,8 +243,8 @@
       "Which country's customers spent the most?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  sql_db_list_tables (call_N39a7l5QFeY60AQbZ9XzdFmU)\n",
-      " Call ID: call_N39a7l5QFeY60AQbZ9XzdFmU\n",
+      "  sql_db_list_tables (call_hqnAveKp3famGpBLqbGlJ8HG)\n",
+      " Call ID: call_hqnAveKp3famGpBLqbGlJ8HG\n",
       "  Args:\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
       "Name: sql_db_list_tables\n",
@@ -254,10 +252,10 @@
       "Album, Artist, Customer, Employee, Genre, Invoice, InvoiceLine, MediaType, Playlist, PlaylistTrack, Track\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  sql_db_schema (call_YdTP2DsBmwxmWJciNzmjKc5H)\n",
-      " Call ID: call_YdTP2DsBmwxmWJciNzmjKc5H\n",
+      "  sql_db_schema (call_s4oouN9gi0TYRQbqTIZoaEXA)\n",
+      " Call ID: call_s4oouN9gi0TYRQbqTIZoaEXA\n",
       "  Args:\n",
-      "    table_names: Customer, Invoice, InvoiceLine\n",
+      "    table_names: Customer, Invoice\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
       "Name: sql_db_schema\n",
       "\n",
@@ -310,30 +308,10 @@
       "2\t4\t2021-01-02 00:00:00\tUllevålsveien 14\tOslo\tNone\tNorway\t0171\t3.96\n",
       "3\t8\t2021-01-03 00:00:00\tGrétrystraat 63\tBrussels\tNone\tBelgium\t1000\t5.94\n",
       "*/\n",
-      "\n",
-      "\n",
-      "CREATE TABLE \"InvoiceLine\" (\n",
-      "\t\"InvoiceLineId\" INTEGER NOT NULL, \n",
-      "\t\"InvoiceId\" INTEGER NOT NULL, \n",
-      "\t\"TrackId\" INTEGER NOT NULL, \n",
-      "\t\"UnitPrice\" NUMERIC(10, 2) NOT NULL, \n",
-      "\t\"Quantity\" INTEGER NOT NULL, \n",
-      "\tPRIMARY KEY (\"InvoiceLineId\"), \n",
-      "\tFOREIGN KEY(\"TrackId\") REFERENCES \"Track\" (\"TrackId\"), \n",
-      "\tFOREIGN KEY(\"InvoiceId\") REFERENCES \"Invoice\" (\"InvoiceId\")\n",
-      ")\n",
-      "\n",
-      "/*\n",
-      "3 rows from InvoiceLine table:\n",
-      "InvoiceLineId\tInvoiceId\tTrackId\tUnitPrice\tQuantity\n",
-      "1\t1\t2\t0.99\t1\n",
-      "2\t1\t4\t0.99\t1\n",
-      "3\t2\t6\t0.99\t1\n",
-      "*/\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  sql_db_query (call_XfuENm5Jr24u0eBgU7P2ZYqt)\n",
-      " Call ID: call_XfuENm5Jr24u0eBgU7P2ZYqt\n",
+      "  sql_db_query (call_Hl8P9DXpfBNUrGbPxnDF6aZ7)\n",
+      " Call ID: call_Hl8P9DXpfBNUrGbPxnDF6aZ7\n",
       "  Args:\n",
       "    query: SELECT c.Country, SUM(i.Total) AS TotalSpent FROM Customer c JOIN Invoice i ON c.CustomerId = i.CustomerId GROUP BY c.Country ORDER BY TotalSpent DESC LIMIT 1\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
@@ -431,7 +409,7 @@
       "\n",
       "\n",
       "\u001b[0m\u001b[38;5;200m\u001b[1;3mAlbum, Artist, Customer, Employee, Genre, Invoice, InvoiceLine, MediaType, Playlist, PlaylistTrack, Track\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `sql_db_schema` with `{'table_names': 'Customer, Invoice, InvoiceLine'}`\n",
+      "Invoking: `sql_db_schema` with `{'table_names': 'Customer, Invoice'}`\n",
       "\n",
       "\n",
       "\u001b[0m\u001b[33;1m\u001b[1;3m\n",
@@ -482,26 +460,6 @@
       "1\t2\t2021-01-01 00:00:00\tTheodor-Heuss-Straße 34\tStuttgart\tNone\tGermany\t70174\t1.98\n",
       "2\t4\t2021-01-02 00:00:00\tUllevålsveien 14\tOslo\tNone\tNorway\t0171\t3.96\n",
       "3\t8\t2021-01-03 00:00:00\tGrétrystraat 63\tBrussels\tNone\tBelgium\t1000\t5.94\n",
-      "*/\n",
-      "\n",
-      "\n",
-      "CREATE TABLE \"InvoiceLine\" (\n",
-      "\t\"InvoiceLineId\" INTEGER NOT NULL, \n",
-      "\t\"InvoiceId\" INTEGER NOT NULL, \n",
-      "\t\"TrackId\" INTEGER NOT NULL, \n",
-      "\t\"UnitPrice\" NUMERIC(10, 2) NOT NULL, \n",
-      "\t\"Quantity\" INTEGER NOT NULL, \n",
-      "\tPRIMARY KEY (\"InvoiceLineId\"), \n",
-      "\tFOREIGN KEY(\"TrackId\") REFERENCES \"Track\" (\"TrackId\"), \n",
-      "\tFOREIGN KEY(\"InvoiceId\") REFERENCES \"Invoice\" (\"InvoiceId\")\n",
-      ")\n",
-      "\n",
-      "/*\n",
-      "3 rows from InvoiceLine table:\n",
-      "InvoiceLineId\tInvoiceId\tTrackId\tUnitPrice\tQuantity\n",
-      "1\t1\t2\t0.99\t1\n",
-      "2\t1\t4\t0.99\t1\n",
-      "3\t2\t6\t0.99\t1\n",
       "*/\u001b[0m\u001b[32;1m\u001b[1;3m\n",
       "Invoking: `sql_db_query` with `{'query': 'SELECT c.Country, SUM(i.Total) AS TotalSpent FROM Customer c JOIN Invoice i ON c.CustomerId = i.CustomerId GROUP BY c.Country ORDER BY TotalSpent DESC LIMIT 1'}`\n",
       "\n",
@@ -549,21 +507,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "a58e987e-c281-4fbe-9c42-cbc594624ffc",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "\n",
     "df = pd.DataFrame(\n",
     "    [\n",
-    "        {\"name\": \"The Da Vinci Code\", \"type\": \"book\", \"price\": 15, \"quantity\": 300, \"rating\": 4},\n",
-    "        {\"name\": \"Jurassic Park\", \"type\": \"book\", \"price\": 12, \"quantity\": 400, \"rating\": 4.5},\n",
-    "        {\"name\": \"Jurassic Park\", \"type\": \"film\", \"price\": 8, \"quantity\": 6, \"rating\": 5},\n",
+    "        {\n",
+    "            \"name\": \"The Da Vinci Code\",\n",
+    "            \"type\": \"book\",\n",
+    "            \"price\": 15,\n",
+    "            \"quantity\": 300,\n",
+    "            \"rating\": 4,\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"Jurassic Park\",\n",
+    "            \"type\": \"book\",\n",
+    "            \"price\": 12,\n",
+    "            \"quantity\": 400,\n",
+    "            \"rating\": 4.5,\n",
+    "        },\n",
+    "        {\n",
+    "            \"name\": \"Jurassic Park\",\n",
+    "            \"type\": \"film\",\n",
+    "            \"price\": 8,\n",
+    "            \"quantity\": 6,\n",
+    "            \"rating\": 5,\n",
+    "        },\n",
     "        {\"name\": \"Matilda\", \"type\": \"book\", \"price\": 5, \"quantity\": 80, \"rating\": 4},\n",
-    "        {\"name\": \"Clockwork Orange\", \"type\": None, \"price\": None, \"quantity\": 20, \"rating\": 4},\n",
+    "        {\n",
+    "            \"name\": \"Clockwork Orange\",\n",
+    "            \"type\": None,\n",
+    "            \"price\": None,\n",
+    "            \"quantity\": 20,\n",
+    "            \"rating\": 4,\n",
+    "        },\n",
     "        {\"name\": \"Walden\", \"type\": None, \"price\": None, \"quantity\": 100, \"rating\": 4.5},\n",
     "    ],\n",
     ")"
@@ -571,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "77941324-8efb-49f7-a53c-015c68fff477",
    "metadata": {},
    "outputs": [],
@@ -579,7 +560,6 @@
     "from langchain import hub\n",
     "from langchain_experimental.tools.python.tool import PythonAstREPLTool\n",
     "from langgraph.prebuilt import create_react_agent\n",
-    "\n",
     "\n",
     "# Prompt\n",
     "prompt_template = hub.pull(\"langchain-ai/pandas-agent-system-prompt\")\n",
@@ -592,6 +572,44 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "40c8504f-816d-4bd6-9949-a80315fcedae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "================================\u001b[1m Human Message \u001b[0m=================================\n",
+      "\n",
+      "What is the average quantity of books with rating 4?\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "Tool Calls:\n",
+      "  python_repl_ast (call_4UdfdfbQAKU3NtISwPBJisdH)\n",
+      " Call ID: call_4UdfdfbQAKU3NtISwPBJisdH\n",
+      "  Args:\n",
+      "    query: df[(df['type']=='book') & (df['rating']==4)]['quantity'].mean()\n",
+      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
+      "Name: python_repl_ast\n",
+      "\n",
+      "190.0\n",
+      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
+      "\n",
+      "The average quantity of books with a rating of 4 is 190.\n"
+     ]
+    }
+   ],
+   "source": [
+    "events = agent_executor.stream(\n",
+    "    {\"messages\": [(\"user\", \"What is the average quantity of books with rating 4?\")]},\n",
+    "    stream_mode=\"values\",\n",
+    ")\n",
+    "for event in events:\n",
+    "    event[\"messages\"][-1].pretty_print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "c7fdb885-39db-438b-a2a8-e7e60c411169",
    "metadata": {},
@@ -601,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "29be4caa-e792-40c7-8a3e-d070f50f3e73",
    "metadata": {},
    "outputs": [],
@@ -658,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "cc55107c-4315-4d1b-ae5e-4bbcea7beec4",
    "metadata": {},
    "outputs": [],
@@ -667,7 +685,6 @@
     "from langchain_community.agent_toolkits.openapi.toolkit import RequestsToolkit\n",
     "from langchain_community.utilities.requests import TextRequestsWrapper\n",
     "from langgraph.prebuilt import create_react_agent\n",
-    "\n",
     "\n",
     "# Prompt\n",
     "prompt_template = hub.pull(\"langchain-ai/api-agent-system-prompt\")\n",
@@ -686,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "id": "d8d8c86e-3b4f-4668-83d0-4343e2597ccd",
    "metadata": {},
    "outputs": [
@@ -699,8 +716,8 @@
       "What are the titles of the top two posts?\n",
       "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
       "Tool Calls:\n",
-      "  requests_get (call_0uLTXYE8KYQcHMRq3lYLho9z)\n",
-      " Call ID: call_0uLTXYE8KYQcHMRq3lYLho9z\n",
+      "  requests_get (call_oxSvNxEMiyEgG82mAZd316Bn)\n",
+      " Call ID: call_oxSvNxEMiyEgG82mAZd316Bn\n",
       "  Args:\n",
       "    url: https://jsonplaceholder.typicode.com/posts?_limit=2\n",
       "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
