--- a/docs/docs/integrations/providers/yi.mdx
+++ b/docs/docs/integrations/providers/yi.mdx
@@ -8,7 +8,7 @@ Register and get an API key from either the China site [here](https://platform.l
 
 ## LLMs
 
-See a [usage example](/docs/integrations/llms/yi.ipynb).
+See a [usage example](/docs/integrations/llms/yi).
 
 ```python
 from langchain_community.llms import YiLLM
@@ -16,7 +16,7 @@ from langchain_community.llms import YiLLM
 
 ## Chat models
 
-See a [usage example](/docs/integrations/chat/yi.ipynb).
+See a [usage example](/docs/integrations/chat/yi).
 
 ```python
 from langchain_community.chat_models import ChatYi
