--- a/docs/docs/integrations/chat/huggingface.ipynb
+++ b/docs/docs/integrations/chat/huggingface.ipynb
@@ -39,7 +39,9 @@
     "import getpass\n",
     "import os\n",
     "\n",
-    "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = getpass.getpass(\"Enter your Hugging Face API key: \")"
+    "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = getpass.getpass(\n",
+    "    \"Enter your Hugging Face API key: \"\n",
+    ")"
    ]
   },
   {
@@ -95,8 +97,7 @@
     }
    ],
    "source": [
-    "from langchain_huggingface import HuggingFaceEndpoint\n",
-    "from langchain_huggingface import ChatHuggingFace\n",
+    "from langchain_huggingface import ChatHuggingFace, HuggingFaceEndpoint\n",
     "\n",
     "llm = HuggingFaceEndpoint(\n",
     "    repo_id=\"HuggingFaceH4/zephyr-7b-beta\",\n",
@@ -305,8 +306,7 @@
     }
    ],
    "source": [
-    "from langchain_huggingface import HuggingFacePipeline\n",
-    "from langchain_huggingface import ChatHuggingFace\n",
+    "from langchain_huggingface import ChatHuggingFace, HuggingFacePipeline\n",
     "\n",
     "llm = HuggingFacePipeline.from_model_id(\n",
     "    model_id=\"HuggingFaceH4/zephyr-7b-beta\",\n",
@@ -342,7 +342,7 @@
     "    load_in_4bit=True,\n",
     "    bnb_4bit_quant_type=\"nf4\",\n",
     "    bnb_4bit_compute_dtype=\"float16\",\n",
-    "    bnb_4bit_use_double_quant=True\n",
+    "    bnb_4bit_use_double_quant=True,\n",
     ")"
    ]
   },
