--- a/docs/docs/integrations/tools/databricks.ipynb
+++ b/docs/docs/integrations/tools/databricks.ipynb
@@ -38,7 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%pip install --upgrade --quiet databricks-sdk langchain-community langchain-openai"
+    "%pip install --upgrade --quiet databricks-sdk langchain-community mlflow"
    ]
   },
   {
