--- a/libs/cli/langchain_cli/integration_template/docs/toolkits.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/toolkits.ipynb
@@ -55,7 +55,7 @@
    "source": [
     "### Installation\n",
     "\n",
-    "The LangChain __ModuleName__ integration lives in the `__package_name__` package:"
+    "This toolkit lives in the `__package_name__` package:"
    ]
   },
   {
