--- a/libs/cli/langchain_cli/integration_template/docs/toolkits.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/toolkits.ipynb
@@ -75,7 +75,7 @@
    "source": [
     "## Instantiation\n",
     "\n",
-    "Now we can instantiate our model object and generate chat completions:\n",
+    "Now we can instantiate our toolkit:\n",
     "\n",
     "- TODO: Update model instantiation with relevant params."
    ]
