--- a/docs/docs/integrations/toolkits/sql_database.ipynb
+++ b/docs/docs/integrations/toolkits/sql_database.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a36c068-e468-4feb-8d96-56a24972fdbd",
+   "cell_type": "markdown",
+   "id": "757e7780-b89a-4a87-b10c-cfa42337a8e0",
    "metadata": {},
-   "outputs": [],
    "source": [
     "---\n",
-    "sidebar_label: SQLDatabase\n",
+    "sidebar_label: SQLDatabaseToolkit\n",
     "---"
    ]
   },
