--- a/libs/cli/langchain_cli/integration_template/docs/chat.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/chat.ipynb
@@ -62,7 +62,8 @@
     "import getpass\n",
     "import os\n",
     "\n",
-    "os.environ[\"__MODULE_NAME___API_KEY\"] = getpass.getpass(\"Enter your __ModuleName__ API key: \")"
+    "if not os.getenv(\"__MODULE_NAME___API_KEY\"):\n",
+    "    os.environ[\"__MODULE_NAME___API_KEY\"] = getpass.getpass(\"Enter your __ModuleName__ API key: \")"
    ]
   },
   {
