--- a/docs/docs/integrations/tools/tavily_search.ipynb
+++ b/docs/docs/integrations/tools/tavily_search.ipynb
@@ -105,11 +105,11 @@
     "tool = TavilySearchResults(\n",
     "    max_results=3,\n",
     "    search_depth=\"basic\",\n",
-    "    include_domains = [\"https://langchain.com\"],\n",
-    "    exclude_domains = [\"https://braintrust.com\"],\n",
-    "    include_answer = False,\n",
-    "    include_raw_content = False,\n",
-    "    include_images = False\n",
+    "    include_domains=[\"https://langchain.com\"],\n",
+    "    exclude_domains=[\"https://braintrust.com\"],\n",
+    "    include_answer=False,\n",
+    "    include_raw_content=False,\n",
+    "    include_images=False,\n",
     ")"
    ]
   },
@@ -170,7 +170,11 @@
     "from langchain_core.messages import ToolCall\n",
     "\n",
     "# A ToolCall is just a typeddict, so this is the same as saying tool.invoke({\"args\": {'query': 'weather in sf?'}, \"type\": \"tool_call\", \"id\": \"foo\", \"name\": \"tavily\"})\n",
-    "ans = tool.invoke(ToolCall(args={\"query\":\"weather in sf?\"},id=\"foo\", name=\"tavily\",type=\"tool_call\"))\n",
+    "ans = tool.invoke(\n",
+    "    ToolCall(\n",
+    "        args={\"query\": \"weather in sf?\"}, id=\"foo\", name=\"tavily\", type=\"tool_call\"\n",
+    "    )\n",
+    ")\n",
     "print(ans)"
    ]
   },
