--- a/libs/cli/langchain_cli/integration_template/docs/llms.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/llms.ipynb
@@ -134,13 +134,9 @@
    "id": "0ee90032",
    "metadata": {},
    "source": [
-    "## Environment Setup\n",
+    "## Invocation\n",
     "\n",
-    "Make sure to set the following environment variables:\n",
-    "\n",
-    "- TODO: fill out relevant environment variables or secrets\n",
-    "\n",
-    "## Usage"
+    "- [ ] TODO: Run cells so output can be seen."
    ]
   },
   {
@@ -152,20 +148,64 @@
    },
    "outputs": [],
    "source": [
-    "from langchain_core.prompts import PromptTemplate\n",
-    "from __module_name__.llms import __ModuleName__LLM\n",
+    "input_text = \"__ModuleName__ is an AI company that \"\n",
     "\n",
-    "template = \"\"\"Question: {question}\n",
+    "completion = llm.invoke(input_text)\n",
+    "completion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "add38532",
+   "metadata": {},
+   "source": [
+    "## Chaining\n",
     "\n",
-    "Answer: Let's think step by step.\"\"\"\n",
+    "We can [chain](/docs/how_to/sequence/) our completion model with a prompt template like so:\n",
     "\n",
-    "prompt = PromptTemplate.from_string(template)\n",
+    "- TODO: Run cells so output can be seen."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "078e9db2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "model = __ModuleName__LLM()\n",
+    "prompt = PromptTemplate(\n",
+    "    \"How to say {input} in {output_language}:\\n\"\n",
+    ")\n",
     "\n",
-    "chain = prompt | model\n",
+    "chain = prompt | llm\n",
+    "chain.invoke(\n",
+    "    {\n",
+    "        \"output_language\": \"German\",\n",
+    "        \"input\": \"I love programming.\",\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e99eef30",
+   "metadata": {},
+   "source": [
+    "## TODO: Any functionality specific to this model provider\n",
     "\n",
-    "chain.invoke({\"question\": \"What is LangChain?\"})"
+    "E.g. creating/using finetuned models via this provider. Delete if not relevant"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9bdfcef",
+   "metadata": {},
+   "source": [
+    "## API reference\n",
+    "\n",
+    "For detailed documentation of all `__ModuleName__LLM` features and configurations head to the API reference: https://api.python.langchain.com/en/latest/llms/__module_name__.llms.__ModuleName__LLM.html"
    ]
   }
  ],
