--- a/libs/cli/langchain_cli/integration_template/docs/chat.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/chat.ipynb
@@ -197,7 +197,7 @@
    "source": [
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
-    "prompt = ChatPromptTemplate.from_messages(\n",
+    "prompt = ChatPromptTemplate(\n",
     "    [\n",
     "        (\n",
     "            \"system\",\n",
