--- a/docs/docs/integrations/toolkits/sql_database.ipynb
+++ b/docs/docs/integrations/toolkits/sql_database.ipynb
@@ -19,8 +19,6 @@
     "\n",
     "This will help you getting started with the SQL Database [toolkit](/docs/concepts/#toolkits). For detailed documentation of all `SQLDatabaseToolkit` features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/agent_toolkits/langchain_community.agent_toolkits.sql.toolkit.SQLDatabaseToolkit.html).\n",
     "\n",
-    "## Overview\n",
-    "\n",
     "Tools within the `SQLDatabaseToolkit` are designed to interact with a `SQL` database. \n",
     "\n",
     "A common application is to enable agents to answer questions using data in a relational database, potentially in an iterative fashion (e.g., recovering from errors).\n",
@@ -240,7 +238,9 @@
    "source": [
     "from langgraph.prebuilt import create_react_agent\n",
     "\n",
-    "agent_executor = create_react_agent(llm, toolkit.get_tools(), state_modifier=system_message)"
+    "agent_executor = create_react_agent(\n",
+    "    llm, toolkit.get_tools(), state_modifier=system_message\n",
+    ")"
    ]
   },
   {
