--- a/libs/cli/langchain_cli/integration_template/docs/toolkits.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/toolkits.ipynb
@@ -128,7 +128,7 @@
    "source": [
     "from langgraph.prebuilt import create_react_agent\n",
     "\n",
-    "agent_executor = create_react_agent(llm, tools, state_modifier=system_message)"
+    "agent_executor = create_react_agent(llm, tools)"
    ]
   },
   {
