add MM-RAG medical cookbook

--- a/cookbook/multi_modal_RAG_medical_vdms.ipynb
+++ b/cookbook/multi_modal_RAG_medical_vdms.ipynb
@@ -106,197 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "297c3eb1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/data/datad/mcetin/langchain/cookbook/CDD-CESM.zip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "root_folder = os.path.abspath('./')\n",
-    "downloaded_zip_file = os.path.join(root_folder, \"CDD-CESM.zip\") \n",
-    "print(downloaded_zip_file)"
+    "downloaded_zip_file = os.path.join(root_folder, \"CDD-CESM.zip\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "31b165d1",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>symptoms</th>\n",
-       "      <th>Patient_ID</th>\n",
-       "      <th>file_path</th>\n",
-       "      <th>images</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>No mass or non mass enhancement (BIRADS 1). Ou...</td>\n",
-       "      <td>197L</td>\n",
-       "      <td>Medical_reports_for_cases/P197.docx</td>\n",
-       "      <td>[/data/datad/mcetin/langchain/cookbook/resized...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Benign</td>\n",
-       "      <td>Status postoperative showing operative scar an...</td>\n",
-       "      <td>197R</td>\n",
-       "      <td>Medical_reports_for_cases/P197.docx</td>\n",
-       "      <td>[/data/datad/mcetin/langchain/cookbook/resized...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Normal</td>\n",
-       "      <td>No speculated mass lesions or suspicious micro...</td>\n",
-       "      <td>24L</td>\n",
-       "      <td>Medical_reports_for_cases/P24.docx</td>\n",
-       "      <td>[/data/datad/mcetin/langchain/cookbook/resized...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Malignant</td>\n",
-       "      <td>Lower inner quadrant and retroareolar high den...</td>\n",
-       "      <td>24R</td>\n",
-       "      <td>Medical_reports_for_cases/P24.docx</td>\n",
-       "      <td>[/data/datad/mcetin/langchain/cookbook/resized...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Benign</td>\n",
-       "      <td>Lower inner benign macrocalcification is noted...</td>\n",
-       "      <td>263L</td>\n",
-       "      <td>Medical_reports_for_cases/P263.docx</td>\n",
-       "      <td>[/data/datad/mcetin/langchain/cookbook/resized...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       label                                           symptoms Patient_ID  \\\n",
-       "0     Normal  No mass or non mass enhancement (BIRADS 1). Ou...       197L   \n",
-       "1     Benign  Status postoperative showing operative scar an...       197R   \n",
-       "2     Normal  No speculated mass lesions or suspicious micro...        24L   \n",
-       "3  Malignant  Lower inner quadrant and retroareolar high den...        24R   \n",
-       "4     Benign  Lower inner benign macrocalcification is noted...       263L   \n",
-       "\n",
-       "                             file_path  \\\n",
-       "0  Medical_reports_for_cases/P197.docx   \n",
-       "1  Medical_reports_for_cases/P197.docx   \n",
-       "2   Medical_reports_for_cases/P24.docx   \n",
-       "3   Medical_reports_for_cases/P24.docx   \n",
-       "4  Medical_reports_for_cases/P263.docx   \n",
-       "\n",
-       "                                              images  \n",
-       "0  [/data/datad/mcetin/langchain/cookbook/resized...  \n",
-       "1  [/data/datad/mcetin/langchain/cookbook/resized...  \n",
-       "2  [/data/datad/mcetin/langchain/cookbook/resized...  \n",
-       "3  [/data/datad/mcetin/langchain/cookbook/resized...  \n",
-       "4  [/data/datad/mcetin/langchain/cookbook/resized...  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>label</th>\n",
-       "      <th>symptoms</th>\n",
-       "      <th>Patient_ID</th>\n",
-       "      <th>file_path</th>\n",
-       "      <th>images</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>Malignant</td>\n",
-       "      <td>Lower inner focal asymmetrical increased densi...</td>\n",
-       "      <td>102R</td>\n",
-       "      <td>Medical_reports_for_cases/P102.docx</td>\n",
-       "      <td>[/data/datad/mcetin/langchain/cookbook/resized...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>521</th>\n",
-       "      <td>Malignant</td>\n",
-       "      <td>Upper outer retroareolar multiple irregular hi...</td>\n",
-       "      <td>119L</td>\n",
-       "      <td>Medical_reports_for_cases/P119.docx</td>\n",
-       "      <td>[/data/datad/mcetin/langchain/cookbook/resized...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         label                                           symptoms Patient_ID  \\\n",
-       "195  Malignant  Lower inner focal asymmetrical increased densi...       102R   \n",
-       "521  Malignant  Upper outer retroareolar multiple irregular hi...       119L   \n",
-       "\n",
-       "                               file_path  \\\n",
-       "195  Medical_reports_for_cases/P102.docx   \n",
-       "521  Medical_reports_for_cases/P119.docx   \n",
-       "\n",
-       "                                                images  \n",
-       "195  [/data/datad/mcetin/langchain/cookbook/resized...  \n",
-       "521  [/data/datad/mcetin/langchain/cookbook/resized...  "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import zipfile\n",
     "import wget\n",
@@ -446,7 +271,7 @@
     "    shutil.rmtree(\"CDD-CESM\")\n",
     "    os.remove(\"manual_annotations.xlsx\")\n",
     "\n",
-    "def create_brca_data(downloaded_zip_file, test_subjects=None):\n",
+    "def create_brca_data(downloaded_zip_file, test_subjects):\n",
     "    with zipfile.ZipFile(downloaded_zip_file, \"r\") as zip_ref:\n",
     "        zip_ref.extractall()\n",
     "        \n",
@@ -462,17 +287,14 @@
     "    df = add_image_path_to_df(df, resized_img_folder)\n",
     "    clean_temp_files_and_folders()\n",
     "    \n",
-    "    df_test = df[df.Patient_ID.isin([\"119L\", \"102R\"])]\n",
-    "    df_rag = df[~df.Patient_ID.isin([\"119L\", \"102R\"])]\n",
+    "    # The dataset has been updated to exclude Image 119L. This image will now be specifically employed to evaluate the \n",
+    "    # performance capabilities of the MM-RAG system\n",
+    "    df_test = df[df.Patient_ID.isin(test_subjects)]\n",
+    "    df_rag = df[~df.Patient_ID.isin(test_subjects)]\n",
     "    \n",
     "    return df_rag, df_test\n",
     "\n",
-    "df_rag, df_test = create_brca_data(downloaded_zip_file, test_subjects = [\"119L\"])\n",
-    "display(df_rag.head())\n",
-    "\n",
-    "# The dataset has been updated to exclude Image 119L. This image will now be specifically employed to evaluate the \n",
-    "# performance capabilities of the MM-RAG system\n",
-    "display(df_test.head())"
+    "df_rag, df_test = create_brca_data(downloaded_zip_file, test_subjects = [\"119L\"])\n"
    ]
   },
   {
