added docstring draft

--- a/libs/cli/langchain_cli/integration_template/docs/vectorstores.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/vectorstores.ipynb
@@ -206,7 +206,7 @@
    "id": "c3620501",
    "metadata": {},
    "source": [
-    "## Query Vectorstore\n",
+    "## Query vector store\n",
     "\n",
     "Once your vector store has been created and the relevant documents have been added you will most likely wish to query it during the running of your chain or agent. \n",
     "\n",
