--- a/docs/docs/integrations/chat/mistralai.ipynb
+++ b/docs/docs/integrations/chat/mistralai.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "# ChatMistralAI\n",
     "\n",
-    "This will help you getting started with Mistral [chat models](/docs/concepts/#chat-models). For detailed documentation of all `ChatMistralAI` features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/chat_models/langchain_mistralai.chat_models.ChatMistralAI.html). The `ChatMistralAI` class is built on top of the [Mistral API](https://docs.mistral.ai/api/).\n",
+    "This will help you getting started with Mistral [chat models](/docs/concepts/#chat-models). For detailed documentation of all `ChatMistralAI` features and configurations head to the [API reference](https://api.python.langchain.com/en/latest/chat_models/langchain_mistralai.chat_models.ChatMistralAI.html). The `ChatMistralAI` class is built on top of the [Mistral API](https://docs.mistral.ai/api/). For a list of all the models supported by Mistral, check out [this page](https://docs.mistral.ai/getting-started/models/).\n",
     "\n",
     "## Overview\n",
     "### Integration details\n",
@@ -81,7 +81,7 @@
    "source": [
     "### Installation\n",
     "\n",
-    "The LangChain __ModuleName__ integration lives in the `langchain_mistralai` package:"
+    "The LangChain Mistral integration lives in the `langchain_mistralai` package:"
    ]
   },
   {
