--- a/docs/docs/integrations/chat/mistralai.ipynb
+++ b/docs/docs/integrations/chat/mistralai.ipynb
@@ -114,7 +114,7 @@
     "from langchain_mistralai import ChatMistralAI\n",
     "\n",
     "llm = ChatMistralAI(\n",
-    "    model=\"mistral-small\",\n",
+    "    model=\"mistral-large-latest\",\n",
     "    temperature=0,\n",
     "    max_retries=2,\n",
     "    # other params...\n",
