--- a/docs/docs/concepts.mdx
+++ b/docs/docs/concepts.mdx
@@ -504,9 +504,10 @@ For some techniques, such as [indexing and retrieval with multiple vectors per d
 
 LangChain includes a [`BaseStore`](https://api.python.langchain.com/en/latest/stores/langchain_core.stores.BaseStore.html) interface,
 which allows for storage of arbitrary data. However, LangChain components that require KV-storage accept a
-more specific `BaseStore[str, bytes]` instance that stores binary data, also called a `ByteStore`, and should internally take care of
-serializing and deserializing. This allows for more modularity, as individual [key-value store implementations](/docs/integrations/stores/)
-can just store and retrieve bytes rather than needing to adapt to different types of data.
+more specific `BaseStore[str, bytes]` instance that stores binary data (referred to as a `ByteStore`), and internally take care of
+encoding and decoding data for their specific needs.
+
+This means that as a user, you only need to think about one type of store rather than different ones for different types of data.
 
 #### Interface
 
@@ -517,6 +518,8 @@ for modifying **multiple** key-value pairs at once:
 - `mset(key_value_pairs: Sequence[Tuple[str, bytes]]) -> None`: set the contents of multiple keys
 - `mdelete(key: Sequence[str]) -> None`: delete multiple keys
 - `yield_keys(prefix: Optional[str] = None) -> Iterator[str]`: yield all keys in the store, optionally filtering by a prefix
+
+For key-value store implementations, see [this section](/docs/integrations/stores/).
 
 ### Tools
 <span data-heading-keywords="tool,tools"></span>
