--- a/docs/docs/how_to/migrate_agent.ipynb
+++ b/docs/docs/how_to/migrate_agent.ipynb
@@ -263,7 +263,7 @@
    "source": [
     "Now, let's pass a custom system message to [react agent executor](https://langchain-ai.github.io/langgraph/reference/prebuilt/#create_react_agent).\n",
     "\n",
-    "LangGraph's prebuilt `create_react_agent` does not take a prompt template directly as a parameter, but instead takes a [`messages_modifier`](https://langchain-ai.github.io/langgraph/reference/prebuilt/#create_react_agent) parameter. This modifies messages before they are passed into the model, and can be one of four values:\n",
+    "LangGraph's prebuilt `create_react_agent` does not take a prompt template directly as a parameter, but instead takes a [`state_modifier`](https://langchain-ai.github.io/langgraph/reference/prebuilt/#create_react_agent) parameter. This modifies messages before they are passed into the model, and can be one of four values:\n",
     "\n",
     "- A `SystemMessage`, which is added to the beginning of the list of messages.\n",
     "- A `string`, which is converted to a `SystemMessage` and added to the beginning of the list of messages.\n",
@@ -287,7 +287,7 @@
     "# This could also be a SystemMessage object\n",
     "# system_message = SystemMessage(content=\"You are a helpful assistant. Respond only in Spanish.\")\n",
     "\n",
-    "app = create_react_agent(model, tools, messages_modifier=system_message)\n",
+    "app = create_react_agent(model, tools, state_modifier=system_message)\n",
     "\n",
     "\n",
     "messages = app.invoke({\"messages\": [(\"user\", query)]})"
@@ -334,7 +334,7 @@
     "    ]\n",
     "\n",
     "\n",
-    "app = create_react_agent(model, tools, messages_modifier=_modify_messages)\n",
+    "app = create_react_agent(model, tools, state_modifier=_modify_messages)\n",
     "\n",
     "\n",
     "messages = app.invoke({\"messages\": [(\"human\", query)]})\n",
@@ -483,7 +483,7 @@
     "\n",
     "memory = MemorySaver()\n",
     "app = create_react_agent(\n",
-    "    model, tools, messages_modifier=system_message, checkpointer=memory\n",
+    "    model, tools, state_modifier=system_message, checkpointer=memory\n",
     ")\n",
     "\n",
     "config = {\"configurable\": {\"thread_id\": \"test-thread\"}}\n",
@@ -615,7 +615,7 @@
     "    return prompt.invoke({\"messages\": messages}).to_messages()\n",
     "\n",
     "\n",
-    "app = create_react_agent(model, tools, messages_modifier=_modify_messages)\n",
+    "app = create_react_agent(model, tools, state_modifier=_modify_messages)\n",
     "\n",
     "\n",
     "for step in app.stream({\"messages\": [(\"human\", query)]}, stream_mode=\"updates\"):\n",
@@ -1216,7 +1216,7 @@
    "source": [
     "### In LangGraph\n",
     "\n",
-    "We can use the [`messages_modifier`](https://langchain-ai.github.io/langgraph/reference/prebuilt/#create_react_agent) just as before when passing in [prompt templates](#prompt-templates)."
+    "We can use the [`state_modifier`](https://langchain-ai.github.io/langgraph/reference/prebuilt/#create_react_agent) just as before when passing in [prompt templates](#prompt-templates)."
    ]
   },
   {
@@ -1270,7 +1270,7 @@
     "    return [(\"system\", \"You are a helpful assistant\"), messages[0]]\n",
     "\n",
     "\n",
-    "app = create_react_agent(model, tools, messages_modifier=_modify_messages)\n",
+    "app = create_react_agent(model, tools, state_modifier=_modify_messages)\n",
     "\n",
     "try:\n",
     "    for step in app.stream({\"messages\": [(\"human\", query)]}, stream_mode=\"updates\"):\n",
