--- a/docs/docs/integrations/toolkits/sql_database.ipynb
+++ b/docs/docs/integrations/toolkits/sql_database.ipynb
@@ -180,6 +180,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5f5751e3-2e98-485f-8164-db8094039c25",
+   "metadata": {},
+   "source": [
+    "API references:\n",
+    "\n",
+    "- [QuerySQLDataBaseTool](https://api.python.langchain.com/en/latest/tools/langchain_community.tools.sql_database.tool.QuerySQLDataBaseTool.html)\n",
+    "- [InfoSQLDatabaseTool](https://api.python.langchain.com/en/latest/tools/langchain_community.tools.sql_database.tool.InfoSQLDatabaseTool.html)\n",
+    "- [ListSQLDatabaseTool](https://api.python.langchain.com/en/latest/tools/langchain_community.tools.sql_database.tool.ListSQLDatabaseTool.html)\n",
+    "- [QuerySQLCheckerTool](https://api.python.langchain.com/en/latest/tools/langchain_community.tools.sql_database.tool.QuerySQLCheckerTool.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c067e0ed-dcca-4dcc-81b2-a0eeb4fc2a9f",
    "metadata": {},
    "source": [
