--- a/libs/cli/langchain_cli/integration_template/docs/toolkits.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/toolkits.ipynb
@@ -113,6 +113,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d11245ad-3661-4405-8558-1188896347ec",
+   "metadata": {},
+   "source": [
+    "TODO: list API reference pages for individual tools."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "dfe8aad4-8626-4330-98a9-7ea1ca5d2e0e",
    "metadata": {},
    "source": [
