--- a/docs/docs/how_to/code_splitter.ipynb
+++ b/docs/docs/how_to/code_splitter.ipynb
@@ -53,6 +53,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "2bb9c73f-9d00-4a19-a81f-cab2f0fd921a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -qU langchain-text-splitters"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "a9e37aa1",
    "metadata": {},
@@ -765,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
