--- a/cookbook/multi_modal_RAG_medical_vdms.ipynb
+++ b/cookbook/multi_modal_RAG_medical_vdms.ipynb
@@ -599,7 +599,7 @@
    "id": "ee128e77",
    "metadata": {},
    "source": [
-    "We will evaluate the effectiveness of the MM-RAG by analyzing the following images. You will see both the CC (Cranio-Caudal) and MLO (Medio-Lateral Oblique) views of the mammogram scan, along with annotations from an expert radiologist. These elements are used to verify the accuracy of the MM-RAG"
+    "We will evaluate the performance of the MM-RAG by analyzing the following images. You will see both the CC (Cranio-Caudal) and MLO (Medio-Lateral Oblique) views of the mammogram scan, along with annotations from an expert radiologist. These elements are used to verify the accuracy of the MM-RAG"
    ]
   },
   {
