--- a/libs/cli/langchain_cli/integration_template/docs/kv_store.ipynb
+++ b/libs/cli/langchain_cli/integration_template/docs/kv_store.ipynb
@@ -9,7 +9,7 @@
    },
    "source": [
     "---\n",
-    "sidebar_label: __ModuleName__\n",
+    "sidebar_label: __ModuleName__ByteStore\n",
     "---"
    ]
   },
@@ -26,15 +26,18 @@
     "- TODO: Add any other relevant links, like information about models, prices, context windows, etc. See https://python.langchain.com/v0.2/docs/integrations/stores/in_memory/ for an example.\n",
     "\n",
     "## Overview\n",
+    "\n",
+    "- TODO: (Optional) A short introduciton to the underlying technology/API.\n",
+    "\n",
     "### Integration details\n",
     "\n",
     "- TODO: Fill in table features.\n",
     "- TODO: Remove JS support link if not relevant, otherwise ensure link is correct.\n",
     "- TODO: Make sure API reference links are correct.\n",
     "\n",
-    "| Class | Package | Local | Serializable | [JS support](https://js.langchain.com/v0.2/docs/integrations/stores/_package_name_) | Package downloads | Package latest |\n",
+    "| Class | Package | Local | [JS support](https://js.langchain.com/v0.2/docs/integrations/stores/_package_name_) | Package downloads | Package latest |\n",
     "| :--- | :--- | :---: | :---: |  :---: | :---: | :---: |\n",
-    "| [__ModuleName__ByteStore](https://api.python.langchain.com/en/latest/stores/__module_name__.stores.__ModuleName__ByteStore.html) | [__package_name__](https://api.python.langchain.com/en/latest/__package_name_short_snake___api_reference.html) | ✅/❌ | beta/❌ | ✅/❌ | ![PyPI - Downloads](https://img.shields.io/pypi/dm/__package_name__?style=flat-square&label=%20) | ![PyPI - Version](https://img.shields.io/pypi/v/__package_name__?style=flat-square&label=%20) |\n",
+    "| [__ModuleName__ByteStore](https://api.python.langchain.com/en/latest/stores/__module_name__.stores.__ModuleName__ByteStore.html) | [__package_name__](https://api.python.langchain.com/en/latest/__package_name_short_snake___api_reference.html) | ✅/❌ | ✅/❌ | ![PyPI - Downloads](https://img.shields.io/pypi/dm/__package_name__?style=flat-square&label=%20) | ![PyPI - Version](https://img.shields.io/pypi/v/__package_name__?style=flat-square&label=%20) |\n",
     "\n",
     "## Setup\n",
     "\n",
@@ -44,7 +47,7 @@
     "\n",
     "### Credentials\n",
     "\n",
-    "- TODO: Update with relevant info.\n",
+    "- TODO: Update with relevant info, or omit if the service does not require any credentials.\n",
     "\n",
     "Head to (TODO: link) to sign up to __ModuleName__ and generate an API key. Once you've done this set the __MODULE_NAME___API_KEY environment variable:"
    ]
@@ -120,13 +123,30 @@
    "outputs": [],
    "source": [
     "kv_store.mset([\n",
-    "  [\"key1\", b\"value1\"],\n",
-    "  [\"key2\", b\"value2\"],\n",
+    "    [\"key1\", b\"value1\"],\n",
+    "    [\"key2\", b\"value2\"],\n",
     "])\n",
     "\n",
     "kv_store.mget([\n",
-    "  \"key1\",\n",
-    "  \"key2\",\n",
+    "    \"key1\",\n",
+    "    \"key2\",\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kv_store.mdelete([\n",
+    "    \"key1\",\n",
+    "    \"key2\",\n",
+    "])\n",
+    "\n",
+    "kv_store.mget([\n",
+    "    \"key1\",\n",
+    "    \"key2\",\n",
     "])"
    ]
   },
